[gd_scene load_steps=12 format=3 uid="uid://c5ienrjb1buvg"]

[ext_resource type="Script" uid="uid://d06di0ecjdy70" path="res://scripts/ui/workdesk_scene.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bbsuw6pn2oo58" path="res://scenes/prefabs/DeskServicePoint_Workdesk.tscn" id="3"]
[ext_resource type="Script" uid="uid://c1jb2jnhticws" path="res://scripts/wardrobe/cursor_hand.gd" id="4"]
[ext_resource type="Script" uid="uid://ce2nlf0hgoh2r" path="res://scripts/ui/wardrobe_physics_tick_adapter.gd" id="5"]
[ext_resource type="Script" uid="uid://ctgc601ixkj3a" path="res://scripts/ui/queue_hud_view.gd" id="7"]
[ext_resource type="Script" uid="uid://b5uji3ko74ljn" path="res://scripts/ui/light/light_zones_adapter.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://c6jy016jxlubk" path="res://scenes/prefabs/lighting/CurtainRig.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://boedrr2kgctj5" path="res://scenes/prefabs/lighting/BulbLightRig.tscn" id="10_rig"]
[ext_resource type="PackedScene" uid="uid://cgmjqx87lwd1s" path="res://scenes/prefabs/CabinetsGrid.tscn" id="11"]
[ext_resource type="PackedScene" path="res://scenes/prefabs/FloorZone.tscn" id="12"]

[sub_resource type="RectangleShape2D" id="103"]
size = Vector2(1000, 800)

[node name="WorkdeskScene2" type="Node2D"]
script = ExtResource("1")
metadata/_edit_vertical_guides_ = [372.0]

[node name="WardrobePhysicsTick" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5")

[node name="StorageHall" type="Node2D" parent="."]
position = Vector2(200, 100)

[node name="CabinetsGrid" parent="StorageHall" instance=ExtResource("11")]
position = Vector2(180, 413)

[node name="CurtainRig" parent="StorageHall" instance=ExtResource("9")]
position = Vector2(1730, -83)
scale = Vector2(-1, 1)
slider_path = NodePath("../../HUDLayer/LightControls/CurtainSlider")

[node name="BulbsColumn" type="Node2D" parent="StorageHall"]
position = Vector2(692, 456)

[node name="BulbRow0" parent="StorageHall/BulbsColumn" instance=ExtResource("10_rig")]
position = Vector2(0, -330)

[node name="BulbRow1" parent="StorageHall/BulbsColumn" instance=ExtResource("10_rig")]
position = Vector2(0, 170)
row_index = 1
source_id = &"bulb_row1"

[node name="LightZonesAdapter" type="Node2D" parent="StorageHall"]
script = ExtResource("8")
curtain_zone_path = NodePath("../CurtainRig/CurtainZone")
bulb_row0_zone_path = NodePath("../BulbsColumn/BulbRow0/LightZone")
bulb_row1_zone_path = NodePath("../BulbsColumn/BulbRow1/LightZone")
service_zone_path = NodePath("../../ServiceZone/ServiceLightZone")
curtain_adapter_path = NodePath("../CurtainRig/CurtainsColumn/CurtainLightAdapter")
debug_draw = false

[node name="FloorZone1" parent="StorageHall" instance=ExtResource("12")]
position = Vector2(1260, 700)

[node name="FloorZone2" parent="StorageHall" instance=ExtResource("12")]
position = Vector2(1260, 900)

[node name="ServiceZone" type="Node2D" parent="."]
position = Vector2(1100, 200)

[node name="ServiceLightZone" type="Area2D" parent="ServiceZone"]
position = Vector2(240, 516)
collision_layer = 0
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ServiceZone/ServiceLightZone"]
shape = SubResource("103")

[node name="ServiceSlots" type="Node2D" parent="ServiceZone"]
position = Vector2(240, 516)

[node name="Desk_A" parent="ServiceZone/ServiceSlots" instance=ExtResource("3")]
desk_id = &"Desk_A"
desk_slot_id = &"DeskSlot_0"

[node name="Desk_B" parent="ServiceZone/ServiceSlots" instance=ExtResource("3")]
position = Vector2(220, 0)
desk_id = &"Desk_B"
desk_slot_id = &"DeskSlot_1"

[node name="HandRoot" type="Node2D" parent="."]
z_index = 1000
z_as_relative = false

[node name="CursorHand" type="Node2D" parent="HandRoot"]
unique_name_in_owner = true
script = ExtResource("4")

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="LightControls" type="Control" parent="HUDLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CurtainSlider" type="VSlider" parent="HUDLayer/LightControls"]
layout_mode = 0
offset_left = 48.0
offset_top = 800.0
offset_right = 64.0
offset_bottom = 950.0
rotation = 3.1415927
max_value = 1.0
step = 0.1

[node name="QueueHudView" type="Control" parent="HUDLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("7")

[node name="QueueHudPanel" type="PanelContainer" parent="HUDLayer/QueueHudView"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 64.0
mouse_filter = 2

[node name="QueueHudRow" type="HBoxContainer" parent="HUDLayer/QueueHudView/QueueHudPanel"]
layout_mode = 2
mouse_filter = 2

[node name="QueueItems" type="HBoxContainer" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="QueueKpis" type="VBoxContainer" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="CheckinRow" type="HBoxContainer" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow/QueueKpis"]
layout_mode = 2
mouse_filter = 2

[node name="CheckinLabel" type="Label" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow/QueueKpis/CheckinRow"]
layout_mode = 2
text = "In:"

[node name="RemainingCheckinValue" type="Label" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow/QueueKpis/CheckinRow"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="CheckoutRow" type="HBoxContainer" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow/QueueKpis"]
layout_mode = 2
mouse_filter = 2

[node name="CheckoutLabel" type="Label" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow/QueueKpis/CheckoutRow"]
layout_mode = 2
text = "Out:"

[node name="RemainingCheckoutValue" type="Label" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow/QueueKpis/CheckoutRow"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="QueueIndicators" type="VBoxContainer" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="QueueStrikesValue" type="Label" parent="HUDLayer/QueueHudView/QueueHudPanel/QueueHudRow/QueueIndicators"]
unique_name_in_owner = true
layout_mode = 2
text = "Strikes: -/-"

[node name="EndShiftButton" type="Button" parent="HUDLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
text = "End Shift (debug)"
